--- a/index.html
+++ b/index.html
@@ -30,33 +30,33 @@
 
 
     <div class="right-card">
-      <div class="top-bar">Try it free 7 days then $20/mo. thereafter</div>
+      <div class="top-bar"><span class="top-bar_try">Try it free 7 days&nbsp</span>then $20/mo. thereafter</div>
       <div class="user-window">
 
         <div class="block">
           <input class="input" type="text" placeholder="First Name">
-          <div class="warning">
+          <div class="warning first-name">
             <p>First Name cannot be empty</p>
           </div>
         </div>
 
         <div class="block">
           <input class="input" type="text" placeholder="Last Name">
-          <div class="warning">
+          <div class="warning last-name">
             <p>Last Name cannot be empty</p>
           </div>
         </div>
 
         <div class="block">
-          <input class="input" type="email" placeholder="Email Address">
-          <div class="warning">
+          <input class="input" type="email" placeholder="Email Address" value="">
+          <div class="warning email">
             <p>Looks like this is not an email</p>
           </div>
         </div>
 
         <div class="block">
           <input class="input" type="password" placeholder="Password">
-          <div class="warning">
+          <div class="warning password">
             <p>Password cannot be empty</p>
           </div>
         </div>
@@ -81,6 +81,7 @@
       Coded by <a href="#">Piotr Prus</a>.
     </p>
   </footer>
+  <script src="script.js"></script>
 </body>
 
 </html>
